--- a/src/Api/Config.Server.Api.Http/Config.Server.Api.Http.csproj
+++ b/src/Api/Config.Server.Api.Http/Config.Server.Api.Http.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="System.Linq.Async" />
   </ItemGroup>
 
 </Project>
