feat: added history refactor: changed folder structure, now Application.Models has only domain-level classes

--- a/src/Application/Config.Server.Application.Contracts/Config.Server.Application.Contracts.csproj
+++ b/src/Application/Config.Server.Application.Contracts/Config.Server.Application.Contracts.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Config.Server.Application.Abstractions\Config.Server.Application.Abstractions.csproj" />
     <ProjectReference Include="..\Config.Server.Application.Models\Config.Server.Application.Models.csproj" />
   </ItemGroup>
 
