--- a/src/Client/Config.Client.Http/Config.Client.Http.csproj
+++ b/src/Client/Config.Client.Http/Config.Client.Http.csproj
@@ -7,15 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Http" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" />
       <PackageReference Include="Microsoft.Extensions.Http" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Config.Server.ApiClient\Config.Server.ApiClient.csproj" />
+      <PackageReference Include="Refit" />
+      <PackageReference Include="Refit.HttpClientFactory" />
     </ItemGroup>
 
 </Project>
