refactor: renamed server and client folders

--- a/src/server/Application/Config.Server.Application/Config.Server.Application.csproj
+++ b/src/server/Application/Config.Server.Application/Config.Server.Application.csproj
@@ -19,5 +19,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
+    
+  <ItemGroup>
+    <InternalsVisibleTo Include="Config.Server.Tests" />  
+  </ItemGroup>  
 
 </Project>
