--- a/src/server/Infrastructure/Config.Server.Infrastructure.Persistence/Config.Server.Infrastructure.Persistence.csproj
+++ b/src/server/Infrastructure/Config.Server.Infrastructure.Persistence/Config.Server.Infrastructure.Persistence.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Npgsql" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Config.Server.Tests" />
+  </ItemGroup>
+
 </Project>
