build: added Dockerfile

--- a/src/server/Api/Config.Server.Api.Http/appsettings.json
+++ b/src/server/Api/Config.Server.Api.Http/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "Infrastructure:ConnectionString": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres"
+  "Infrastructure:ConnectionString": "Host=host.docker.internal;Port=5432;Database=postgres;Username=postgres;Password=postgres"
 }
