--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,15 @@ services:
       - "5432:5432"
     networks:
       - config-network
+        
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports: 
+       - "5150:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
 
 networks:
   config-network:
