--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
        - "5150:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - CONNECTIONSTRING=Host=host.docker.internal;Port=5432;Database=postgres;Username=postgres;Password=postgres
 
 networks:
   config-network:
