--- a/src/server/Api/Config.Server.Api.Http/appsettings.json
+++ b/src/server/Api/Config.Server.Api.Http/appsettings.json
@@ -5,6 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Infrastructure:ConnectionString": "Host=host.docker.internal;Port=5432;Database=postgres;Username=postgres;Password=postgres"
+  "AllowedHosts": "*"
 }
