--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -59,10 +59,10 @@ jobs:
         run: dotnet restore
 
       - name: build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build src/clients/*/*.csproj --configuration Release --no-restore
         
       - name: pack
-        run: dotnet pack --configuration Release --no-build --output nupkg
+        run: dotnet pack src/clients/*/*.csproj --configuration Release --no-build --output nupkg
   
       - name: add GitHub Packages source
         run: dotnet nuget add source --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
